# FDM_Poisson_Cpp-Python

./: .gitignore  CMakeLists.txt  README.md  main.cpp  post.py
src/: defines_eigen.hpp  defines_standard.hpp  insertCoefficients.cpp  insertCoefficients.hpp
src/main/: CoreIncludes.hpp
src/main/core/: definesEigen.hpp  definesStandard.hpp  fatals.hpp  logger.cpp  logger.hpp
src/main/mesh/: mesh.hpp  valueSource.hpp
src/main/preconditioner/: Jacobi.cpp  incompleteCholesky.cpp  preconditioners.hpp
src/main/solver/: BiCGstab_l_.cpp  BiCGstab_l_.hpp  CG.cpp  CG.hpp  conjugateGradients.hpp
src/post/: binaryData.py  filledContour.py  plotContour.py  plotFilledContour.py  plotting.style  readBinary.py  readDataBinary.py
src/solver/: defines_eigen.hpp  mesh.hpp  valueSource.hpp
src/solver/core/: definesStandard.hpp  logger.cpp  logger.hpp
